All js functions implemented. Also added logout class. THE END IS NEAR!

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -8,6 +8,12 @@
     color: #78909C;
 }
 
+#logout-btn{
+    float: right;
+    width: 125px;
+    color: #78909C;
+}
+
 #users-container {
     display: block;
     width: 100%;
