--- a/web/css/style.css
+++ b/web/css/style.css
@@ -37,6 +37,11 @@
     border-radius: 3px 0 0 0;
 }
 
+#username{
+    float: left;
+    color: #006064;
+}
+
 .online-switch-off{
     background-color: #f2fff3;
     box-shadow:0 2px 2px rgba(0, 0, 0, .075);
